more compact covariance matrix calculation

--- a/Second_exercise/Second exercise.ipynb
+++ b/Second_exercise/Second exercise.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -157,14 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "covariance_X = np.zeros((D,D))\n",
+    "'''covariance_X = np.zeros((D,D))\n",
     "for D1 in range(D):\n",
     "    for D2 in range(D):\n",
-    "        covariance_X[D1,D2] = np.sum(data_learning[:,D1]*data_learning[:,D2]) / N_learning"
+    "        covariance_X[D1,D2] = np.sum(data_learning[:,D1]*data_learning[:,D2]) / N_learning'''\n",
+    "\n",
+    "covariance_X = np.matmul(data_learning.T, data_learning) / N_learning # more compact"
    ]
   },
   {
@@ -2528,6 +2530,13 @@
     "ax1.grid(\"on\")\n",
     "ax2.grid(\"on\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
